# stock-tracker

./: Cargo.toml  README.md  main.rs
.github/workflows/: Build.yml  Release.yml
src/: lib.rs  main.rs
src/back/: message.rs  mod.rs  stock.rs  stork_api.rs
src/ui/: mod.rs
