[package]
name = "stock_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.19.0", features = ["persistence"]}
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
crossbeam="*"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"], optional = true }
thiserror = "1.0.32"
url = "2.2.2"
ureq = "2.5.0"
encoding_rs = "0.8.31"
chrono = "0.4.22"
ehttp = "0.2.0"
egui_extras = "0.19.0"
regex = "1.6.0"
