[package]
name = "stock-tracker"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.31.0", features = ["persistence","__screenshot"]}

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
crossbeam="0.8.4"
lazy_static = "1.5.0"
serde = { version = "1.0.136", features = ["derive"] }
url = "2.5.4"
ureq = "3.0.5"
encoding_rs = "0.8.35"
chrono ={version = "0.4.39",features = ["serde"]}
ehttp = "0.5.0"
egui_extras = "0.29.1"
regex = "1.11.1"
egui_plot = "0.31.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json","blocking"] }



[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = "debuginfo"